--- a/coldfront/components/site/templates/project/project_detail.html
+++ b/coldfront/components/site/templates/project/project_detail.html
@@ -199,6 +199,13 @@ Project Detail
     </div>
   </div>
   <div class="card-body">
+    <div class="alert alert-info">
+      <i class="fas fa-info-circle" aria-hidden="true"></i> 
+      This membership list does not guarantee you have access to the resources you need.
+      The Allocations section further below lists the allocations you have access to, if you're a manager all allocations are listed
+      regardless. If you do not see an allocation for the resource you need then you do not have access to it and need to
+      email a project manager about granting you access.
+    </div>
     <div class="table-responsive">
       <table id="projectuser_table" class="table table-hover">
         <thead>
