--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -411,6 +411,7 @@ Allocation Detail
             <li>Disabled - This user's access to this allocation's space has been removed</li>
             <li>Retired - This user is no longer active in this allocation and likely should be removed</li>
           </ul>
+          If a user has an Active status and cannot access the storage space then they most likely need to log out (not disconnect) from all interactive login sessions and log back in for their newly added access to become active. 
         </div>
       {% endif %}
       <table id="user_table" class="table table-hover">
