Include additional information on the change request details page

--- a/coldfront/components/site/templates/allocation/allocation_change_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_change_detail.html
@@ -112,6 +112,10 @@ Allocation Change Detail
                 <td><i class="fas fa-lock-open" aria-hidden="true"></i></td>
               {% endif %}
             </tr>
+            <tr>
+              <th scope="row" class="text-nowrap">Additional Information</th>
+              <td>{{ allocation_change.allocation.get_information }}</td>
+            </tr>
           </table>
         </div>
     </div>
