--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -449,8 +449,8 @@ Allocation Detail
               <td>{{ user.modified|date:"M. d, Y g:i a" }}</td>
               {% if is_allowed_to_update_project %}
                 <td>
-                  <a title="Edit user" href="{% url 'allocation-user-detail' allocation.pk user.id %}">
-                    <i class="fas fa-user-edit" aria-hidden="true"></i><span class="sr-only">Edit</span>
+                  <a class="btn btn-primary" href="{% url 'allocation-user-detail' allocation.pk user.pk %}" role="button">
+                    <i class="fas fa-user-edit" aria-hidden="true"></i> Edit
                   </a>
                 </td>
               {% endif %}
