--- a/coldfront/components/site/templates/project/project_detail.html
+++ b/coldfront/components/site/templates/project/project_detail.html
@@ -269,7 +269,9 @@ Project Detail
               </td> -->
               <td>
                 {% if is_allowed_to_update_project %}
-                  <a title="Edit user" data-toggle="tooltip" data-delay="250" href="{% url 'project-user-detail' project.pk user.id %}"><i class="fas fa-user-edit" aria-hidden="true"></i><span class="sr-only">Edit</span></a>
+                  <a class="btn btn-primary" href="{% url 'project-user-detail' project.pk user.pk %}" role="button">
+                    <i class="fas fa-user-edit" aria-hidden="true"></i> Edit
+                  </a>
                 {% endif %}
               </td>
             </tr>
