--- a/coldfront/plugins/customizable_forms/templates/customizable_forms/resource_selection.html
+++ b/coldfront/plugins/customizable_forms/templates/customizable_forms/resource_selection.html
@@ -16,7 +16,7 @@ Choose a Resource for Your Allocation
       </div>
       <div class="card-body">
         <div class="row">
-          {% for resource in resources.resources %}
+          {% for resource in resources %}
             <div class="col-6">
               <div class="card mb-3">
                 <div class="card-header">
