--- a/coldfront/components/site/templates/common/authorized_navbar.html
+++ b/coldfront/components/site/templates/common/authorized_navbar.html
@@ -45,6 +45,9 @@
         {% elif perms.project.can_review_pending_project_reviews or perms.grant.can_view_all_grants %}
           {% include 'common/navbar_director.html' %}
         {% endif %}
+        {% if 'request_forms/navbar_request_forms.html'|template_exists %}
+          {% include 'request_forms/navbar_request_forms.html' %}
+        {% endif %}
         {% if settings.CENTER_HELP_URL %}
           {% include 'common/navbar_help.html' %}
         {% endif %}
