Highlight help option in the navbar when on the help page

--- a/coldfront/plugins/help/templates/help/form_completed.html
+++ b/coldfront/plugins/help/templates/help/form_completed.html
@@ -15,4 +15,8 @@ Contact Research Technologies
     Your message has been sent. Expect a response within one business day.
 </div>
 
+<script>
+  $("#navbar-main > ul > li.active").removeClass("active");
+  $("#navbar-help").addClass("active");
+</script>
 {% endblock %}
