--- a/coldfront/plugins/advanced_search/templates/advanced_search/advanced_search.html
+++ b/coldfront/plugins/advanced_search/templates/advanced_search/advanced_search.html
@@ -144,9 +144,11 @@ Project and Allocation Export List
   }
 
   $(document).ready(function () {
-    $('#results_table').DataTable({
-      bFilter: false
-    });
+    if (columns.length) {
+      $('#results_table').DataTable({
+        bFilter: false
+      });
+    }
 
     $("#select_all_project_displays").click(function () {
       $("input[name*='project_search-display__project']").prop('checked', $(this).prop('checked'));
