Fix errors from disabled plugins

--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -48,17 +48,9 @@ Allocation Detail
         {% if can_move_allocation %}
           <a href="{% url 'move-allocation' allocation.pk %}" class="btn btn-primary mr-1" role="button" style="float: right;">Move Allocation</a>
         {% endif %}
-        {% if allocation.status.name in 'Active, Billing Information Submitted' and allocation.get_parent_resource.name in ALLOCATION_REMOVAL_REQUESTS_ALLOWED %}
-          {% load allocation_removal_requests_tags %}
-          {% has_admin_perm allocation request.user 'add_allocationremovalrequest' as has_perm %}
-          {% if has_perm and user_has_permissions %}
-            <a class="btn btn-primary mr-1" href="{% url 'allocation_removal_requests:allocation-remove' allocation.pk %}" role="button" style="float: right;">
-              Remove Allocation
-            </a>
-          {% elif is_allowed_to_update_project %}
-            <a class="btn btn-primary mr-1" href="{% url 'allocation_removal_requests:allocation-removal-request' allocation.pk %}" role="button" style="float: right;">
-              Request Removal
-            </a>
+        {% if 'allocation_removal_requests/allocation_removal_request_links.html'|template_exists %}
+          {% if allocation.status.name in 'Active, Billing Information Submitted' and allocation.get_parent_resource.name in ALLOCATION_REMOVAL_REQUESTS_ALLOWED %}
+            {% include 'allocation_removal_requests/allocation_removal_request_links.html' %}
           {% endif %}
         {% endif %}
       </div>
