--- a/coldfront/components/site/templates/common/navbar_admin.html
+++ b/coldfront/components/site/templates/common/navbar_admin.html
@@ -1,3 +1,5 @@
+{% load common_tags %}
+
 <li id="navbar-admin" class="nav-item dropdown">
   <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Admin</a>
   <div class="dropdown-menu">
@@ -9,13 +11,14 @@
     <a id="navbar-project-reviews" class="dropdown-item" href="{% url 'project-review-list' %}">Project Reviews/Requests</a>
     <a id="navbar-allocation-requests" class="dropdown-item" href="{% url 'allocation-request-list' %}">
       Allocation Requests</a>
-    <a id="navbar-allocation-remove-requests" class="dropdown-item" href="{% url 'allocation_removal_requests:allocation-removal-request-list' %}">
-      Allocation Removal Requests</a>
+    {% if 'allocation_removal_requests/navbar_allocation_removal_requests.html'|template_exists %}
+      {% include 'allocation_removal_requests/navbar_allocation_removal_requests.html' %}
+    {% endif %}
     <a id="navbar-allocation-change-request" class="dropdown-item" href="{% url 'allocation-change-list' %}">
       Allocation Change Requests</a>
-    <a id="navbar-advanced-search" class="dropdown-item" href="{% url 'advanced-search' %}">
-      Advanced Search
-    </a>
+    {% if 'advanced_search/navbar_advanced_search.html'|template_exists %}
+      {% include 'advanced_search/navbar_advanced_search.html' %}
+    {% endif %}
     <a id="navbar-grant-report" class="dropdown-item" href="{% url 'grant-report' %}">Grant Report</a>
   </div>
 </li>
