--- a/coldfront/components/site/templates/project/project_detail.html
+++ b/coldfront/components/site/templates/project/project_detail.html
@@ -35,46 +35,53 @@ Project Detail
 <div id="alert_div">
 </div>
 
-{% if project.status.name in 'Archived, Denied, Renewal Denied' %}
-  <div class="alert alert-warning" role="alert">
-    You cannot make changes to a project with status "{{ project.status.name }}".
-  </div>
-{% endif %}
-
 <div class="mb-3">
   <h2 class="text-justify">{{ project.title }}</h2>
   <hr>
 </div>
 
-{% if not project.status.name in 'Archived, Denied, Expired, Renewal Denied' and is_allowed_to_update_project %}
-  <div class="card mb-3 bg-light">
-    <div class="card-header">
-      <h3 class="d-inline" id="manage-project"><i class="fas fa-cubes" aria-hidden="true"></i> Manage Project</h3>
-      <div class="float-right">
-        {% if not project.status.name in 'Archived, Denied, Expired, Renewal Denied' %}
-          <a class="btn btn-primary" href="{% url 'project-update' project.pk %}" role="button"><i class="far fa-edit" aria-hidden="true"></i> Update Project Information</a>
-          {% if not project.status.name in 'Waiting For Admin Approval, Review Pending' %}
-            <a class="btn btn-primary" href="{% url 'project-archive' project.id %}" role="button"><i class="fas fa-file-archive" aria-hidden="true"></i> Archive Project</a>
-          {% endif %}
-        {% endif %}
-      </div>
-    </div>
-    <div class="card-body">
-      {% if not project.status.name in 'Archived, Denied, Expired, Renewal Denied' %}
-        <a class="btn btn-success" href="{% url 'project-add-users-search' project.pk %}" role="button"><i class="fas fa-user-plus" aria-hidden="true"></i> Add Users</a>
-        {% if 'grant' not in project.get_env|get_value_from_dict:'forbidden_features' %}
-          <a class="btn btn-success" href="{% url 'grant-create' project.id %}" role="button"><i class="fas fa-trophy" aria-hidden="true"></i> Add Grant</a>
-        {% endif %}
-        {% if 'publication' not in project.get_env|get_value_from_dict:'forbidden_features' %}
-          <a class="btn btn-success" href="{% url 'publication-search' project.pk %}" role="button"><i class="fas fa-newspaper" aria-hidden="true"></i> Add Publication</a>
-        {% endif %}
-        {% if 'research_output' not in project.get_env|get_value_from_dict:'forbidden_features' %}
-          <a class="btn btn-success" href="{% url 'add-research-output' project.pk %}" role="button"><i class="far fa-newspaper" aria-hidden="true"></i> Add Research Output</a>
+<div class="card mb-3 bg-light">
+  <div class="card-header">
+    <h3 class="d-inline" id="manage-project"><i class="fas fa-cubes" aria-hidden="true"></i> Manage Project</h3>
+    <div class="float-right">
+      {% if not project.status.name in 'Archived, Denied, Expired, Renewal Denied' and is_allowed_to_update_project %}
+        <a class="btn btn-primary" href="{% url 'project-update' project.pk %}" role="button"><i class="far fa-edit" aria-hidden="true"></i> Update Project Information</a>
+        {% if not project.status.name in 'Waiting For Admin Approval, Review Pending' %}
+          <a class="btn btn-primary" href="{% url 'project-archive' project.id %}" role="button"><i class="fas fa-file-archive" aria-hidden="true"></i> Archive Project</a>
         {% endif %}
       {% endif %}
     </div>
   </div>
-{% endif %}
+  <div class="card-body">
+    {% if not project.status.name in 'Archived, Denied, Expired, Renewal Denied' and is_allowed_to_update_project %}
+      <a class="btn btn-success" href="{% url 'project-add-users-search' project.pk %}" role="button"><i class="fas fa-user-plus" aria-hidden="true"></i> Add Users</a>
+      {% if 'grant' not in project.get_env|get_value_from_dict:'forbidden_features' %}
+        <a class="btn btn-success" href="{% url 'grant-create' project.id %}" role="button"><i class="fas fa-trophy" aria-hidden="true"></i> Add Grant</a>
+      {% endif %}
+      {% if 'publication' not in project.get_env|get_value_from_dict:'forbidden_features' %}
+        <a class="btn btn-success" href="{% url 'publication-search' project.pk %}" role="button"><i class="fas fa-newspaper" aria-hidden="true"></i> Add Publication</a>
+      {% endif %}
+      {% if 'research_output' not in project.get_env|get_value_from_dict:'forbidden_features' %}
+        <a class="btn btn-success" href="{% url 'add-research-output' project.pk %}" role="button"><i class="far fa-newspaper" aria-hidden="true"></i> Add Research Output</a>
+      {% endif %}
+    {% else %}
+      {% if not is_allowed_to_update_project %}
+        <div class="alert alert-info mb-0" role="alert">
+          <i class="fas fa-info-circle" aria-hidden="true"></i>
+          Only managers can modify projects
+        </div>
+      {% else %}
+        <div class="alert alert-warning mb-0" role="alert">
+          <i class="fas fa-info-circle" aria-hidden="true"></i>
+          You cannot make changes to a project with status "{{ project.status.name }}"
+        </div>
+      {% endif %}
+    {% endif %}
+  </div>
+  <div class="card-footer">
+    <a class="float-right btn btn-primary mr-1" href="{% url 'project-list' %}">Return to Project List</a>
+  </div>
+</div>
 
 <div
   class="modal fade"
