--- a/coldfront/components/site/templates/allocation/allocation_detail.html
+++ b/coldfront/components/site/templates/allocation/allocation_detail.html
@@ -33,28 +33,60 @@ Allocation Detail
   </div>
 {% endif %}
 
+<div class="card mb-3 bg-light">
+  <div class="card-header">
+    <h3 class="d-inline" id="manage-project"><i class="fas fa-cubes" aria-hidden="true"></i> Manage Allocation</h3>
+    <div class="float-right">
+      {% if allocation.is_changeable and allocation.status.name == 'Active' and is_allowed_to_update_project %}
+        <a class="btn btn-primary mr-1" href="{% url 'allocation-change' allocation.pk %}" role="button" style="float: right;">
+          Request Change
+        </a>
+      {% endif %}
+      {% if can_move_allocation %}
+        <a href="{% url 'move-allocation' allocation.pk %}" class="btn btn-primary mr-1" role="button" style="float: right;">Move Allocation</a>
+      {% endif %}
+      {% if 'allocation_removal_requests/allocation_removal_request_links.html'|template_exists %}
+        {% if allocation.status.name in 'Active, Billing Information Submitted' and allocation.get_parent_resource.name in ALLOCATION_REMOVAL_REQUESTS_ALLOWED %}
+          {% include 'allocation_removal_requests/allocation_removal_request_links.html' %}
+        {% endif %}
+      {% endif %}
+    </div>
+  </div>
+  <div class="card-body">
+    {% if not allocation.status.name in 'Denied, Expired, Renewal Denied, Removed, Revoked' and is_allowed_to_update_project %}
+      {% if not allocation.get_parent_resource.name == 'Geode-Project' %}
+        <a class="btn btn-success" href="{% url 'allocation-add-users' allocation.pk %}" role="button">
+          <i class="fas fa-user-plus" aria-hidden="true"></i> Add Users
+        </a>
+        <a class="btn btn-danger" href="{% url 'allocation-remove-users' allocation.pk %}" role="button">
+          <i class="fas fa-user-times" aria-hidden="true"></i> Remove Users
+        </a>
+      {% endif %}
+    {% else %}
+      {% if not is_allowed_to_update_project %}
+        <div class="alert alert-info mb-0" role="alert">
+          <i class="fas fa-info-circle" aria-hidden="true"></i>
+          Only project managers can modify allocations
+        </div>
+      {% else %}
+        <div class="alert alert-warning mb-0" role="alert">
+          <i class="fas fa-info-circle" aria-hidden="true"></i>
+          You cannot make changes to an allocation with status "{{ allocation.status.name }}"
+        </div>
+      {% endif %}
+    {% endif %}
+  </div>
+  <div class="card-footer">
+    <div class="float-right">
+      <a class="btn btn-primary mr-1" href="{% url 'allocation-list' %}">Return to Allocation List</a>
+      <a class="btn btn-primary mr-1" href="{% url 'project-detail' allocation.project.pk %}">Return to Project</a>
+    </div>
+  </div>
+</div>
+
 <div class="card mb-3">
   <div class="card-header">
-    <div class="row">
-      <div class="col">
-        <h3><i class="fas fa-list" aria-hidden="true"></i> Allocation Information</h3>
-      </div>
-      <div class="col" style="padding-right: 14px;">
-        {% if allocation.is_changeable and allocation.status.name == 'Active' and is_allowed_to_update_project %}
-          <a class="btn btn-primary mr-1" href="{% url 'allocation-change' allocation.pk %}" role="button" style="float: right;">
-            Request Change
-          </a>
-        {% endif %}
-        {% if can_move_allocation %}
-          <a href="{% url 'move-allocation' allocation.pk %}" class="btn btn-primary mr-1" role="button" style="float: right;">Move Allocation</a>
-        {% endif %}
-        {% if 'allocation_removal_requests/allocation_removal_request_links.html'|template_exists %}
-          {% if allocation.status.name in 'Active, Billing Information Submitted' and allocation.get_parent_resource.name in ALLOCATION_REMOVAL_REQUESTS_ALLOWED %}
-            {% include 'allocation_removal_requests/allocation_removal_request_links.html' %}
-          {% endif %}
-        {% endif %}
-      </div>
-    </div>
+    <h3><i class="fas fa-list" aria-hidden="true"></i> Allocation Information</h3>
   </div>
   <div class="card-body">
     <form method="post">
@@ -328,53 +360,13 @@ Allocation Detail
   </div>
 {% endif %}
 
-<!-- Start Allocation Invoices -->
-{% if allocation.get_parent_resource.requires_payment %}
-  <div class="card mb-3">
-    <div class="card-header">
-      <h3 class="d-inline"><i class="fas fa-info-circle" aria-hidden="true"></i> Allocation Invoices</h3>
-      <span class="badge badge-secondary">{{ allocation_invoices.count }}</span>
-    </div>
-    <div class="card-body">
-      {% if allocation_invoices %}
-      <div class="table-responsive">
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Status</th>
-              <th scope="col">Created</th>
-              <th scope="col">Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for invoice in allocation_invoices %}
-              <tr>
-                <td>{{ invoice.pk }}</td>
-                <td>{{ invoice.status }}</td>
-                <td>{{ invoice.created|date:"M d, Y" }}</td>
-                <td><a class="btn btn-primary" href="{% url 'allocation-all-invoices-detail' invoice.pk %}" role="button">Details</a></td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-      {% else %}
-      <div class="alert alert-info">
-        There are no allocation invoices to display.
-      </div>
-      {% endif %}
-    </div>
-  </div>
-{% endif %}
-
 <!-- Start Allocation Users -->
 <div class="card mb-3">
   <div class="card-header">
     <h3 class="d-inline"><i class="fas fa-users" aria-hidden="true"></i> Users in Allocation</h3>
     <span class="badge badge-secondary">{{allocation_users.count}}</span>
     <div class="float-right">
-      {% if allocation.project.status.name != 'Archived' and is_allowed_to_update_project and allocation.status.name in 'Active,New,Renewal Requested, Paid, Payment Pending, Payment Requested, Billing Information Submitted' %}
+      {% if is_allowed_to_update_project and not allocation.status.name in 'Denied, Expired, Renewal Denied, Removed, Revoked' %}
         {% if not allocation.get_parent_resource.name == 'Geode-Project' %}
           <a class="btn btn-success" href="{% url 'allocation-add-users' allocation.pk %}" role="button">
             <i class="fas fa-user-plus" aria-hidden="true"></i> Add Users
