--- a/coldfront/components/site/templates/project/project_detail.html
+++ b/coldfront/components/site/templates/project/project_detail.html
@@ -79,7 +79,7 @@ Project Detail
     {% endif %}
   </div>
   <div class="card-footer">
-    <a class="float-right btn btn-primary mr-1" href="{% url 'project-list' %}">Return to Project List</a>
+    <a class="float-right btn btn-primary" href="{% url 'project-list' %}">Return to Project List</a>
   </div>
 </div>
 
